tests/ui/typeck/suppressed-error.stderr
error[E0308]: mismatched types
  --> $DIR/suppressed-error.rs:2:9
   |
LL |     let (x, y) = ();
   |         ^^^^^^   -- this expression has type `()`
   |         |
   |         expected `()`, found `(_, _)`
   |
   = note: expected unit type `()`
                  found tuple `(_, _)`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
